CHANGES IN FLTK 1.1.4

	- Fixed an IRIX compile problem caused by a missing
	  #include (STR #157)
	- FLUID didn't write color/selection_color() calls using
	  the symbolic names when possible, nor did it cast
	  integer colors to Fl_Color (STR #146)
	- Fl_File_Chooser was very close for multiple file
	  selection in large directories (STR #140)
	- Fl_Text_Display/Editor did not disable the current
	  selection when focus was shifted to another widget
	  (STR #131)
	- Fl_Choice didn't use the normal focus box when the
	  plastic scheme was in use (STR #129)
	- Fl_Text_Editor didn't use selection_color()
	  consistently (STR #130)
	- The fltk_forms, fltk_gl, and fltk_images DSO's and
	  HP-UX shared libraries are now linked against the fltk
	  shared library to provide complete dependency
	  resolution (STR #118)
	- The configure.in file did not work with autoconf 2.57.
	- FLUID didn't redraw widgets when changing the X, Y, W,
	  or H values in the widget panel (STR #120)
	- Fl_Window::show(argc, argv) wasn't calling
	  Fl::get_system_colors() as documented (STR #119)
	- DSO (shared library) building wasn't quite right for
	  some platforms (STR #118)
	- OSX: some changes to make ProjectBuilder compiles
	  possible.
	- OSX: FLTK would not know where a window was positioned
	  by the OS. As a result, popup menus could open at 
	  wrong positions.


CHANGES IN FLTK 1.1.4rc2

	- Fl_Window::show(argc,argv) incorrectly opened the
	  display prior to parsing the arguments; this prevented
	  the "-display foo" option from working (STR #111)
	- Images were not clipped properly on MacOS X (STR #114)
	- Fl::reload_scheme() and Fl::scheme("foo") incorrectly
	  called Fl::get_system_colors().  This prevented an
	  application from setting its own color preferences
	  (STR #115)
	- The 'Enter' key event on OS X would not set
	  Fl::e_text.
	- Changed behaviour of fluid to always paste into
	  a selected group (STR #88)
	- Menuitem now changes font, even if fontsize